Uploaded image for project: 'Apache HAWQ'
  1. Apache HAWQ
  2. HAWQ-571

Fix Misspellings in libyarn

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 2.0.0.0-incubating
    • libyarn
    • None

    Description

      in exception.c
      YarnBadBoolFoumat should be YarnBadBoolFormat,
      YarnBadConfigFoumat should be YarnBadConfigFormat
      YarnBadNumFoumat should be YarnBadNumFormat

      Attachments

        Activity

          People

            wlin Wen Lin
            wlin Wen Lin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: