HAWQ-571. Fix misspellings in libyarn